Fix BUG: (nested) column-reverse wrapped flexbox width sizing! (Chrome & Edge OK) (Firefox is bugged here...)

--- a/styling/static.css
+++ b/styling/static.css
@@ -91,8 +91,7 @@ span > svg {
 
 #cityview-topcontrols {
   display: flex;
-  justify-content: space-between;
-  align-items: start;
+  align-items: flex-start;
   margin: 1em 2em 0 2em;
 }
 
@@ -115,7 +114,7 @@ span > svg {
 #cityview-ui-planning-container {
   display: flex;
   flex-direction: column-reverse;
-  align-items: start;
+  align-items: flex-start;
   box-sizing: border-box;
   height: 100%;
   padding: 1em 2em;
@@ -125,7 +124,7 @@ span > svg {
 #cityview-ui-stats-container {
   display: flex;
   flex-direction: column;
-  align-items: end;
+  align-items: flex-end;
   box-sizing: border-box;
   padding: 1em 2em;
   min-width: 0;
@@ -133,19 +132,20 @@ span > svg {
 
 #cityview-cityplanning {
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   gap: 1.5em;
 }
 
 #cityview-citystats {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   gap: 1.5em;
 }
 
 #cityplanning-container {
   display: flex;
   align-items: flex-end;
+  height: calc(100% - 5em);
   max-height: calc(100% - 5em);
 }
 
@@ -156,19 +156,21 @@ span > svg {
 */
 #cityview-cityplanning-menu {
   display: flex;
-  writing-mode: vertical-lr;
-  text-orientation: upright;
-  flex-direction: row-reverse;
+  /* writing-mode: vertical-lr; */
+  /* text-orientation: upright; */
+  flex-direction: column-reverse;
   flex-wrap: wrap;
   align-items: flex-start;
+  height: 100%;
   max-height: 100%;
+  min-width: 0;
   padding-left: 1.5em;
 }
 
 /* Flex Bug #14 more fix: */
-#cityview-cityplanning-menu * {
+/* #cityview-cityplanning-menu * {
   writing-mode: horizontal-tb;
-}
+} */
 
 #cityview-citystats-menu {
   display: flex;
